[tool.poetry]
name = "learning-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Henry Maguire <henrymaguire@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
tqdm = "^4.67.1"
matplotlib = "^3.9.3"
torch = "^2.5.1"
chess = "^1.11.1"
gymnasium = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
